css/style.css
:root {
	--primary-color: #293b5f;
	--secondary-color: #47597e;
}

.px-6 {
	padding-left: 4rem;
	padding-right: 4rem;
}

.w-30 {
	width: 30%;
	height: 30%;
}

.me-6 {
	margin-right: 6rem;
}

.pt-6 {
	padding-top: 6rem;
}

hr {
	width: 65%;
	height: 2px !important;
	justify-content: center;
	color: black;
}

.logo-text {
	font-family: "Comfortaa", cursive;
}

body {
	font-family: "Noto Sans", sans-serif;
	color: var(--primary-color);
}

/* Header */
#header {
	padding: 30px 0;
	position: fixed;
	left: 0;
	top: 0;
	right: 0;
	transition: all 0.5s;
	z-index: 997;
}

#header .container-fluid {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

#header.header-scrolled {
	background: linear-gradient(to right, #b9dfe2, #ffffff);
	padding: 15px 0;
	transition: all 0.5s;
}

#header #logo {
	float: left;
}

#header #logo h1 {
	font-size: 34px;
	margin: 0;
	padding: 0;
	line-height: 1;
	font-weight: 700;
	letter-spacing: 3px;
}

#header #logo h1 a,
#header #logo h1 a:hover {
	color: var(--primary-color);
	text-decoration: none;
}

@media (max-width: 768px) {
	#header #logo h1 {
		font-size: 28px;
	}
}

/* Navbar */
.nav-menu {
	margin: 0;
	padding: 0;
	list-style: none;
}

.nav-menu li {
	position: relative;
	white-space: nowrap;
}

.nav-menu > li {
	float: left;
}

/* Nav Menu Container */
#nav-menu-container {
	float: right;
	margin: 0;
}

@media (max-width: 768px) {
	#nav-menu-container {
		display: none;
	}
}

/* Nav Menu Styling */
.nav-menu a {
	padding: 0 8px 10px 8px;
	text-decoration: none;
	display: inline-block;
	color: #98adc3;
	font-weight: 700;
	font-size: 13px;
	text-transform: uppercase;
	outline: none;
}

.nav-menu li:hover > a,
.nav-menu > .menu-active > a {
	color: var(--primary-color);
}

.nav-menu > li {
	margin-left: 10px;
}

/* Mobile Nav Toggle */
#mobile-nav-toggle {
	border: 0;
	background: none;
	font-size: 24px;
	display: none;
	transition: all 0.4s;
	outline: none;
	cursor: pointer;
	display: none;
}

#mobile-nav-toggle i {
	color: #fff;
	background: var(--primary-color);
	display: inline-block;
	text-align: center;
	line-height: 1;
	border-radius: 50%;
	padding: 10px 10px 10px 10px;
	transition: background 0.5s;
	z-index: 11;
}

@media (max-width: 768px) {
	#mobile-nav-toggle {
		display: block;
	}
	.px-6 {
		padding-left: 2rem;
		padding-right: 2rem;
	}
}

/* Mobile Nav Styling */
#mobile-nav {
	position: fixed;
	top: 0;
	padding-top: 18px;
	bottom: 0;
	z-index: 998;
	background: rgb(41, 59, 95);
	opacity: 0.95;
	left: -260px;
	width: 260px;
	overflow-y: auto;
	transition: 0.4s;
}

#mobile-nav ul {
	padding: 0;
	margin: 0;
	list-style: none;
}

#mobile-nav ul li {
	position: relative;
}

#mobile-nav ul li a {
	color: #fff;
	font-size: 13px;
	text-transform: uppercase;
	overflow: hidden;
	padding: 10px 22px 10px 15px;
	position: relative;
	text-decoration: none;
	width: 100%;
	display: block;
	outline: none;
	font-weight: 700;
}

#mobile-nav ul li a:hover {
	background-color: #ffffff;
	color: var(--primary-color);
}

#mobile-body-overly {
	width: 100%;
	height: 100%;
	z-index: 997;
	top: 0;
	left: 0;
	position: fixed;
	background: rgba(0, 0, 0, 0.2);
	display: none;
}

/* Mobile Nav body classes */

body.mobile-nav-active {
	overflow: hidden;
}

body.mobile-nav-active #mobile-nav {
	left: 0;
}

body.mobile-nav-active #mobile-nav-toggle {
	color: #fff;
}

@media (max-width: 576px) {
	.px-6 {
		padding-left: 2rem;
		padding-right: 2rem;
	}
}

/* Home */
#home {
	display: flex;
	flex-direction: "column";
	align-items: center;
	width: 100%;
	min-height: 100vh;
	background-image: url("../img/home.png");
	background-size: cover;
	background-position: center center;
}

#home .container-fluid {
	max-width: 800px;
}

#home .btn {
	width: 130px;
	justify-items: center;
	text-align: center;
}

#home .btn-container {
	display: flex;
	flex-direction: row;
	width: 100%;
	gap: 2rem;
}

#home .btn-contactus {
	background-color: var(--secondary-color);
	color: white;
}

#home .btn-aboutus {
	border: 2px solid var(--secondary-color);
	color: var(--primary-color);
}

@media (max-width: 576px) {
	#home .btn-container {
		display: flex;
		flex-direction: column;
		width: 100%;
		gap: 10px;
	}
}

/* About Us */
#aboutus {
	display: flex;
	flex-direction: "column";
	align-items: flex-start;
	width: 100%;
	min-height: 90vh;
	background-image: url("../img/aboutus.png");
	background-size: cover;
	background-position: center bottom;
}

#aboutus span {
	border-bottom: 2px solid var(--primary-color);
}

#aboutus-left {
	width: 49%;
	transition: all 0.4s;
}
#aboutus-left:hover {
	transform: rotate(15deg) scale(1.1);
	border-radius: 40px;
	opacity: 1;
	z-index: 10;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.192);
}

/* Categories */
#categories {
	display: block;
	min-height: 100vh;
	background-image: url("../img/categories.png");
	background-size: cover;
	background-position: center center;
}

#categories .container-fluid {
	align-items: center;
}

a {
	text-decoration: none;
	color: var(--secondary-color);
}

.card-category {
	color: #47597e;
	width: 100%;
	height: 500px;
	transition: transform 0.2s;
}

.card-category:hover {
	transform: scale(1.1);
}

.card-category .card-category-content {
	background: linear-gradient(
		0.31deg,
		#ffffff 6.25%,
		rgba(255, 255, 255, 0.587628) 68.72%,
		rgba(255, 255, 255, 0) 99.7%,
		rgba(255, 255, 255, 0.269396) 99.7%
	);
}

#category1 {
	background-image: url("../img/categories1.png");
}

#category2 {
	background-image: url("../img/categories2.png");
}

#category3 {
	background-image: url("../img/categories3.png");
}

/* Projects */
#projects {
	min-height: 100vh;
}

.projects-title {
	color: var(--primary-color);
}
.projects-container {
	color: #47597e;
	position: relative;
	margin-bottom: 100px;
	display: flex;
	flex-direction: "column";
	align-items: flex-start;
}

.vertikal {
	width: 596px;
	height: 744px;
}

.horizontal {
	height: 596px;
	width: 744px;
}

/* Types */
.owl-carousel .owl-stage {
	display: flex;
	align-items: center;
}

.owl-carousel {
	text-align: center;
}

.Types {
	margin-bottom: 10%;
}

.type-img {
	border-radius: 6%;
}

/* Footer */
footer,
.footer-copyright {
	background-color: var(--primary-color);
}

.footer-items {
	color: #b1bfdc;
}

.white-line {
	background-color: #8b9ec6;
	width: 100%;
	height: 2px;
	margin: auto 0;
}

/* Back To Top */
.back-to-top {
	position: fixed;
	display: none;
	background: var(--primary-color);
	color: #fff;
	display: inline-block;
	width: 44px;
	height: 44px;
	text-align: center;
	line-height: 1;
	font-size: 16px;
	border-radius: 50%;
	right: 2rem;
	bottom: 15px;
	transition: background 0.5s;
	z-index: 11;
}

.back-to-top i {
	padding-top: 12px;
	color: #fff;
}

@media (max-width: 768px) {
	.back-to-top {
		bottom: 15px;
	}
}

/* Jumbotron */
#jumbotron {
	display: flex;
	flex-direction: "column";
	align-items: center;
	width: 100%;
	min-height: 100vh;
	background-image: url("../img/home.jpg");
	background-size: cover;
	background-position: center center;
}

#jumbotron .container-fluid {
	max-width: 800px;
}

/* apip */
#pricecard {
	padding-top: 5rem;
	padding-bottom: 5rem;
}

.card {
	border-radius: 16px;
	border-style: groove;
}

.card-body {
	background-color: #f8f8f8;
}

.card-title {
	padding-top: 50px;
	color: #293b5f;
}

.price {
	padding-top: 50px;
	padding-bottom: 50px;
	color: #293b5f;
	font-size: 100px;
}

.testimoni2-container {
	background-color: #f8f8f8;
	height: 25rem;
	padding-top: 5rem;
	padding-bottom: 5rem;
	margin-bottom: 5rem;
}

.tittle-test {
	font-size: 60px;
	font-weight: bold;
	color: #293b5f;
}

.tittle {
	font-size: 70px;
	font-weight: bold;
	color: #293b5f;
}

p {
	font-size: 22px;
	font-weight: 300;
	color: #47597e;
}

.partner-container {
	background-color: #f8f8f8;
	height: 20rem;
	padding-top: 5rem;
	margin-bottom: 5rem;
}

.photo-partner {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

/* .jumbotron-container {
	padding-top: 15rem;
	padding-bottom: 15rem;
	background-position: center center;
} */

